--- a/1.html
+++ b/1.html
@@ -3,12 +3,18 @@
 <head>
   <title>WEB1 - html</title>
   <meta charset="utf-8">
+  <style>
+  a {
+    color:black;
+    text-decoration: none;
+  }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <ol>
-  <li><a href="1.html">HTML </a></li>
-  <li><a href="2.html">css </a></li>
+  <li><a href="1.html"style="color:red;text-decoration:underline">HTML </a></li>
+  <li><a href="2.html">CSS </a></li>
   <li><a href="3.html">JavaScipt</a></li>
 </ol>
 <h2>HTML</h2>
