--- a/2.html
+++ b/2.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <style>
+   a {
+     color:black;
+     text-decoration: none;
+   }
+   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <ol>
   <li><a href="1.html">HTML </a></li>
-  <li><a href="2.html">css </a></li>
+  <li><a href="2.html"style="color:red; text-decoration:underline" >CSS </a></li>
   <li><a href="3.html">JavaScipt </a></li>
 </ol>
 <h1>CSS란 무엇인가?</h1>
