--- a/3.html
+++ b/3.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1 - JavaScipt</title>
   <meta charset="utf-8">
+  <style>
+  a {
+    color:black;
+    text-decoration: none;
+  }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <ol>
   <li><a href="1.html">HTML </a></li>
-  <li><a href="2.html">css </a></li>
-  <li><a href="3.html">JavaScipt </a></li>
+  <li><a href="2.html">CSS </a></li>
+  <li><a href="3.html"style= "color:red;text-decoration:underline">JavaScipt </a></li>
 </ol>
 <p><h1>JavaScipt란 무엇일까?</h1></p>
 <p>
