--- a/1.html
+++ b/1.html
@@ -8,6 +8,10 @@
     color:black;
     text-decoration: none;
   }
+  h1 {
+    font-size: 45px;
+    text-align: center;
+  }
   </style>
 </head>
 <body>
@@ -17,9 +21,8 @@
   <li><a href="2.html">CSS </a></li>
   <li><a href="3.html">JavaScipt</a></li>
 </ol>
-<h2>HTML</h2>
 
-<h1>HTML이란 무엇인가?</h1><br>
+<h2>HTML이란 무엇인가?</h2><br>
 <a href ="https://www.w3.org/TR/html52/" target="blank" title="html5 speicificarion">
 Hypertext Markup Language (HTML)</a> is the standard markup<br>
 language for <strong>creating <u>web</u> pages</strong> and web applications.
