--- a/2.html
+++ b/2.html
@@ -8,16 +8,27 @@
      color:black;
      text-decoration: none;
    }
+   #active {
+     color:red;
+   }
+   .saw {
+     color:gray;
+   }
+
+   h1 {
+     font-size: 45px;
+     text-align: center;
+   }
    </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <ol>
-  <li><a href="1.html">HTML </a></li>
-  <li><a href="2.html"style="color:red; text-decoration:underline" >CSS </a></li>
+  <li><a href="1.html" class="saw">HTML </a></li>
+  <li><a href="2.html" class="saw" id="active">CSS </a></li>
   <li><a href="3.html">JavaScipt </a></li>
 </ol>
-<h1>CSS란 무엇인가?</h1>
+<h2>CSS란 무엇인가?</h2>
 <p>
 Media Queries is an enhancement of the
 <a href ="https://www.w3.org/Style/CSS/specs.en.html" target="blank" title="css speicificarion">
