--- a/1.html
+++ b/1.html
@@ -3,25 +3,17 @@
 <head>
   <title>WEB1 - html</title>
   <meta charset="utf-8">
-  <style>
-  a {
-    color:black;
-    text-decoration: none;
-  }
-  h1 {
-    font-size: 45px;
-    text-align: center;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+<div id ="grid">
 <ol>
   <li><a href="1.html"style="color:red;text-decoration:underline">HTML </a></li>
   <li><a href="2.html">CSS </a></li>
   <li><a href="3.html">JavaScipt</a></li>
 </ol>
-
+<div id="article">
 <h2>HTML이란 무엇인가?</h2><br>
 <a href ="https://www.w3.org/TR/html52/" target="blank" title="html5 speicificarion">
 Hypertext Markup Language (HTML)</a> is the standard markup<br>
@@ -39,4 +31,7 @@ rendered page. It provides a means to create structureddocuments by denoting<br>
 structural semantics for text such as headings, paragraphs, lists, links,<br>
 quotes andother items. HTML elements are delineated by tags, written using<br>
 angle brackets.
+</p>
+</div>
+</div>
 </body>
