--- a/2.html
+++ b/2.html
@@ -3,45 +3,33 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
-  <style>
-   a {
-     color:black;
-     text-decoration: none;
-   }
-   #active {
-     color:red;
-   }
-   .saw {
-     color:gray;
-   }
-
-   h1 {
-     font-size: 45px;
-     text-align: center;
-   }
-   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html" class="saw">HTML </a></li>
-  <li><a href="2.html" class="saw" id="active">CSS </a></li>
-  <li><a href="3.html">JavaScipt </a></li>
-</ol>
-<h2>CSS란 무엇인가?</h2>
-<p>
-Media Queries is an enhancement of the
-<a href ="https://www.w3.org/Style/CSS/specs.en.html" target="blank" title="css speicificarion">
-media rules of CSS</a> and the “media” attribute in HTML.<br>
-It adds parameters such as size of display,color depth and aspect ratio.<br>
-This is because within a class of media (such as TV sets) there can still be important variations.<br>
-It is related to the work on CC/PP, but is a much more light-weight and limited solution.
-</P><p>
-<img src="2.jpg" width="80%">
-<p style="margin-top:45px;">
-Media Queries defines a syntax for short expressions that describe required features of media (or devices),<br>
-e.g.: minimum or maximum screen size, color capabilities, resolution, aspect ratio, type of pointing device, <br>
-viewing environment, scripting capabilities, etc.<br>
- Media Queries is related to the work on CC/PP, but is a more light-weight and limited solution.<br>
-</p></body>
-</html>
+  <div id ="grid">
+    <ol>
+      <li><a href="1.html">HTML </a></li>
+      <li><a href="2.html" style="color:red;text-decoration:underline">CSS </a></li>
+      <li><a href="3.html">JavaScipt </a></li>
+    </ol>
+    <div id="article">
+      <h2>CSS란 무엇인가?</h2>
+      <p>
+      Media Queries is an enhancement of the
+      <a href ="https://www.w3.org/Style/CSS/specs.en.html" target="blank" title="css speicificarion">
+      media rules of CSS</a> and the “media” attribute in HTML.<br>
+      It adds parameters such as size of display,color depth and aspect ratio.<br>
+      This is because within a class of media (such as TV sets) there can still be important variations.<br>
+      It is related to the work on CC/PP, but is a much more light-weight and limited solution.
+      <img src="2.jpg" width="80%">
+      <p style="margin-top:45px;">
+      Media Queries defines a syntax for short expressions that describe required features of media (or devices),<br>
+      e.g.: minimum or maximum screen size, color capabilities, resolution, aspect ratio, type of pointing device, <br>
+      viewing environment, scripting capabilities, etc.<br>
+       Media Queries is related to the work on CC/PP, but is a more light-weight and limited solution.<br>
+     </p>
+    </div>
+  </div>
+  </body>
+  </html>
