--- a/3.html
+++ b/3.html
@@ -3,25 +3,18 @@
 <head>
   <title>WEB1 - JavaScipt</title>
   <meta charset="utf-8">
-  <style>
-  a {
-    color:black;
-    text-decoration: none;
-  }
-  h1 {
-    font-size: 45px;
-    text-align: center;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id ="grid">
 <ol>
   <li><a href="1.html">HTML </a></li>
   <li><a href="2.html">CSS </a></li>
   <li><a href="3.html"style= "color:red;text-decoration:underline">JavaScipt </a></li>
 </ol>
-<p><h1>JavaScipt란 무엇일까?</h1></p>
+<div id="article">
+<h2>JavaScipt란 무엇일까?</h2>
 <p>
   <a href="https://www.w3resource.com/javascript/introduction/ECMA-and-javascript.php" target ="blank" title = "javascript란?">
   JavaScript is a cross-platform</a>, object-oriented scripting language developed by Netscape was first used in Netscape browsers.
@@ -37,5 +30,7 @@
   The ECMA-262 standard is also approved by the ISO
   (International Organization for Standardization) as ISO-16262.
   </p>
+</div>
+</div>
   </body>
   </html>
